@@ -42,7 +42,7 @@ define( function( require ) {
       Solute.MILK,
       Solute.CHICKEN_SOUP,
       Solute.COFFEE,
-      Solute.BEER,
+      Solute.ORANGE_JUICE,
       Solute.SODA,
       Solute.VOMIT,
       Solute.BATTERY_ACID
